init : 스프린트 미션 12